  ZMResultList::getPageNumber()
- made resultlist package a sub-package of rp
- add simple meta data support to ZMDatabase
- fix broken admin ajax support
- rename zm_php_bb to zm_phpbb2
- allow array($obj, "method") as function parameter for ZMWrapperRule
- improve for custom database connections
- make nickname read-only in account_edit

Release 0.9.2
- add database support for data type blob
- add ZMModel::populateCustom($table) to populate custom fields
- add zm_openid
- set content type for views as 'text/html; charset='.HTML_CHARSET
- make ZMToolboxHtml::encode() preserve exising entities in strings
- make admin language tool mark duplicate mappings and add inline warnings if
  duplicate keys with different values exist; b:#1993788
- add missing support for blocking accounts
- added new event to track account creation (ZM_EVENT_CREATE_ACCOUNT)
- make backtrace more readable
- ZMDatabase:
  * add support for date and datetime
  * define fixed format for ZMDatabase API date and datetime formats (this
    means all dates and datetimes will now have to follow that format.
- make all date related operations use ZMTools::translateDateString, rather
  than using a mixture of zen_date_raw, ZMTools and PHP functions; this means
	date formats all use the same syntax (dd, mm, cc, yy (or yyyy), hh, ii, ss)
	it is still possible to use PHP date/time functions on model date values,
	though
- add 'dbMappings' setting pointing to the db mapping file (relative to ZM
  root)
- make date validation smarter
- refactor some code in ZMAddress; this requires a simple change to
  address.php, to get the countryId using $address->getCountryId() rather via
  the country itself; create_account.php needs update, too
- add transparent support for using value lists to ZMDatabase (and
  implementations)
- fix category admin plugin to update only if actually active
- make db table mapper a proper service to allow dynamic additions (plugins)