@@ -1,0 +1,144 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2008 ZenMagick
+ *
+ * Portions Copyright (c) 2003 The zen-cart developers
+ * Portions Copyright (c) 2003 osCommerce
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * Plugin page controller base class.
+ *
+ * @author DerManoMann
+ * @package org.zenmagick.plugins
+ * @version $Id$
+ */
+class ZMPluginPageController extends ZMObject {
+    private $id_;
+    private $title_;
+    private $plugin_;
+
+
+    /**
+     * Create a new instance.
+     *
+     * @param string id The id.
+     * @param string title The page title.
+     * @param string plugin The parent plugin name.
+     */
+    function __construct($id, $title=null, $plugin) {
+        parent::__construct();
+        $this->id_ = $id;
+        $this->title_ = null != $title ? $title : $id;
+        $this->plugin_ = $plugin;
+    }
+
+    /**
+     * Destruct instance.
+     */
+    function __destruct() {
+        parent::__destruct();
+    }
+
+
+    /**
+     * Get the id.
+     *
+     * @return string The page id.
+     */
+    public function getId() { return $this->id_; }
+
+    /**
+     * Process a HTTP request.
+     *
+     * <p>Supported request methods are <code>GET</code> and <code>POST</code>.</p>
+     *
+     * @return ZMPluginPage A <code>ZMPluginPage</code> instance or <code>null</code>.
+     */
+    public function process() { 
+        if (!ZMSettings::get('isAdmin')) {
+            throw ZMLoader::make('ZMException', 'illegal access');
+        }
+
+        $page = null;
+        switch (ZMRequest::getMethod()) {
+            case 'GET':
+                $page = $this->processGet();
+                break;
+            case 'POST':
+                $page = $this->processPost();
+                break;
+            default:
+                throw ZMLoader::make('ZMException', 'unsupported request method: ' . ZMRequest::getMethod());
+        }
+
+        return $page;
+    }
+
+
+    /**
+     * Process a HTTP GET request.
+     * 
+     * @return ZMPluginPage A <code>ZMPluginPage</code> that handles presentation or <code>null</code>
+     * if the controller generates the contents itself.
+     */
+    public function processGet() {
+        return ZMLoader::make('PluginPage', $this->id_, $this->title_);
+    }
+
+
+    /**
+     * Process a HTTP POST request.
+     * 
+     * @return ZMPluginPage A <code>ZMPluginPage</code> that handles presentation or <code>null</code>
+     * if the controller generates the contents itself.
+     */
+    public function processPost() { return $this->processGet(); }
+
+    /**
+     * Get the plugin.
+     *
+     * @return ZMPlugin The plugin.
+     */
+    protected function getPlugin() {
+        return ZMPlugins::instance()->getPluginForId($this->plugin_);
+    }
+
+    /**
+     * Evaluate template and return contents.
+     *
+     * @param array context The page context.
+     * @param string viewDir Optional view folder relative to the plugin dir; default is <code>views</code>.
+     * @return string The page contents.
+     */
+    protected function getPageContents($context, $viewDir='views') {
+        foreach ($context as $name => $value) {
+            $$name = $value;
+        }
+        $template = file_get_contents($this->getPlugin()->getPluginDir().'/'.$viewDir.'/'.$this->getId().'.php');
+        ob_start();
+        eval('?>'.$template);
+        return ob_get_clean();
+    }
+
+}
+
+?>
