@@ -47,6 +47,8 @@ Release 0.9.3
 - allow array($obj, "method") as function parameter for ZMWrapperRule
 - improve for custom database connections
 - make nickname read-only in account_edit
+- add ZMPluginPageController class and allow plugins to use that to generate
+  admin page content
 
 Release 0.9.2
 - add database support for data type blob
